Fix some Edge specific rendering behaviors  - Fix long links in Edge not wrapping correctly  - Fix grey instead of black borders

--- a/httpGUI/style.css
+++ b/httpGUI/style.css
@@ -201,6 +201,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: yellow;
     border-width: 4px;
     border-style: solid;
+    border-color: black;
 }
 
 .warning-text {
